--- a/package.json
+++ b/package.json
@@ -2,11 +2,19 @@
   "name": "react-first-component",
   "version": "0.1.0",
   "private": false,
+  "main": "dist/First.js",
+  "module": "dist/First.js",
   "babel": {
     "presets": [
       "@babel/preset-react"
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/casufi/first-module.git"
+  },
+  "author": "Volodymyr Kotulskyi",
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
